--------------------------------------------------------------------------------
drkns 2025-06-24 23:40:49+01:00 - build 6500

1. Apply L flag in Owner panel column (show domain) to plugin panels too.

--------------------------------------------------------------------------------
drkns 2025-06-23 17:21:50+01:00 - build 6499

1. Correction of 6483.

--------------------------------------------------------------------------------
drkns 2025-06-19 21:23:03+01:00 - build 6498

1. Ignore "[x] Hex value" in "Go to" dialog when using percents.

--------------------------------------------------------------------------------
drkns 2025-06-16 18:11:04+01:00 - build 6497

1. Continue 6492.

--------------------------------------------------------------------------------
drkns 2025-06-15 16:28:05+01:00 - build 6496

1. Continue 6492.

2. Continue 6495.

3. Replace ucd with uchardet.
   It should cover more cases and at least it seems to be still supported/developed.

--------------------------------------------------------------------------------
drkns 2025-06-15 03:05:35+01:00 - build 6495

1. Improve codepage detection.

--------------------------------------------------------------------------------
drkns 2025-06-14 18:40:00+01:00 - build 6494

1. Correction of 6454.

--------------------------------------------------------------------------------
drkns 2025-06-14 14:11:51+01:00 - build 6493

1. Correction of 6492.

--------------------------------------------------------------------------------
drkns 2025-06-12 17:46:46+01:00 - build 6492

1. Print command when needed.

--------------------------------------------------------------------------------
drkns 2025-06-11 22:13:04+01:00 - build 6491

1. Do not hide panels on far:config.

--------------------------------------------------------------------------------
drkns 2025-06-10 21:35:59+01:00 - build 6490

1. Continue gh-957.

2. Continue 6489.
