@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+zg 2025-06-27 02:53:35+03:00 - build 6501
+
+1. bad codepage warning was only displayed if the problem was on the last line.
+
+--------------------------------------------------------------------------------
 drkns 2025-06-24 23:40:49+01:00 - build 6500
 
 1. Apply L flag in Owner panel column (show domain) to plugin panels too.
